@@ -1,3 +1,8 @@
+2005-03-29 hugo303
+
+	* src/check.h.in: Fixed compatibility with gcc 2.95.3 according
+	to sourceforge patch #1161654.
+
 2005-03-02 hugo303
 
 	* src/check.h.in: Added define for NULL if needed.
